--- a/_drafts/2023-08-11-开立医疗.md
+++ b/_drafts/2023-08-11-开立医疗.md
@@ -2,8 +2,9 @@
 layout: post
 title: "关于医药行业投资的思考过程"
 date: 2023-08-12 13:19:53
-categories: personal
+categories: 
 ---
+
 爱尔眼科
 赛道很好
 创始人精通资本运作是不是真心做好企业？董事会成员中没有一个眼科专家，高级管理人员只有中有2专家（唐仕波、杨智宽）
