--- a/_drafts/2023-08-11-开立医疗.md
+++ b/_drafts/2023-08-11-开立医疗.md
@@ -2,8 +2,12 @@
 layout: post
 title: "关于医药行业投资的思考过程"
 date: 2023-08-12 13:19:53
-categories: 
+categories: 投资
 ---
+
+最近医药反腐可谓是沸沸扬扬，我作为一个普通人，看到一个又一个的社会蛀虫被揪出来，还是感到非常的振奋。这是对国家，对社会，对行业都起到巨大的正向作用，提升了全社会的公平性。尽管如此，情绪的恐慌还是导致了医药行业的普跌，
+众所周知近年来中国老龄化速度飞快，但看到具体的数字还是触目惊心。“十四五”时期，我国60岁及以上老年人口总量将突破3亿人，占总人口比重超过20%，进入中度老龄化阶段。到2035年前后，我国老年人口总量将增加到4.2亿人左右，占比超过30%，进入重度老龄化阶段。到本世纪中叶，我国老年人口规模、老龄化率将相继达到峰值。很显然，老龄化在未来20年里会是一个不可抗拒的大趋势，因此我一直很看好医药行业的投资机会。但因为医药行业本身的专业门槛，导致我很难识别出行业内的好公司，就一直下不去手。
+
 
 爱尔眼科
 赛道很好
