--- a/_drafts/2023-08-11-开立医疗.md
+++ b/_drafts/2023-08-11-开立医疗.md
@@ -32,7 +32,7 @@ categories: 投资
 现金流：经营现金流净额4.7，经营活动净现金流通常都大于营业收入。投资现金流净额：-4.3，其中支付其他与投资活动有关的现金12。
 前五客户占比12%，不集中。
 
-市值187亿，市盈率40，动态市盈率33。应收17.6亿，净利润3.7亿。彩超营收10亿，增长14%，毛利66%；内镜营收6亿，增长43%，毛利69%。国外8亿，国内9.6亿。销售费用4.2亿
+市值187亿，市盈率40，动态市盈率33。营收17.6亿，净利润3.7亿，经营活动净现金流4.7亿。彩超营收10亿，增长14%，毛利66%；内镜营收6亿，增长43%，毛利69%。国外8亿，国内9.6亿。销售费用4.2亿
 营业成本中原材料成本接近80%。
 主要产品超声诊断仪和电子内窥镜。超声不如迈瑞，软镜方面国内领先，并且刚刚开始国产替代之路，技术壁垒高，国内只有两家公司从事内镜相关产品。
     软镜是消化道癌症早筛的“金标准”，由人体天然腔道深入体内，镜体较长且需具备一定柔性，光电信号传输距离较远，镜体插入部直径较小且功能集成丰富，对设计工艺及制造技术的要求更高，具有较高的技术壁垒，产品包括胃镜、肠镜、支气管镜等，广泛应用于消化科、呼吸科、耳鼻喉科等科室。
