--- a/_posts/2023-8-17-cat.md
+++ b/_posts/2023-8-17-cat.md
@@ -8,10 +8,12 @@ categories: 物理
 薛定谔的猫这个词我很早以前就看到过，当时就不知道啥意思，还专门去搜了一下，结果搜出来的解释却让我越看越糊涂，只能不了了之。直到最近看了一些量子论方面的科普书籍，才算大概理解了其含义。
 在具体解释这个词之前，先抛一个简单的问题：在大家的认识里，物理学是什么？我想可能大多数人脑子里都会飘出来一句话：物理是一门以实验为基础的学科。大致上就是先实验观察，再总结规律，最后提出理论。这个理解本身没有错，但可能大多数人都会跟我有一个理解上的误区，认为实验都是类似于比萨斜塔上丢球这种，会在现实世界真实发生的实验。然而实际上是很多物理学中大名鼎鼎的理论都是思想实验，也就是全靠想象。而薛定谔的猫其实就是一个大名鼎鼎的思想实验。这个实验的文字描述其实字数很少，每个字也都很容易理解，但只要合在一起就突出一个令人费解，一如量子论本身。
 
-波动？微粒？   
+### 波动？微粒？
+
 整件事要先从光说起，“神说要有光就有光”，但神没有告诉我们，光到底是什么？这个问题困扰了人类很久。我们每天一睁开眼，在有光的地方就能通过眼睛看到东西。那么一个很自然的问题产生了，为什么眼睛能看到东西？最开始人们猜测，光是人眼发出的一种东西，因为眼睛睁开能看到，闭上就无法看到了。当然，生活在现代的我们都知道，人眼成像的原理是物体表面对光的反射，但关于光的成像原理大概是在一千年前才被准确的提出，可见这个看似简单的问题困扰了人类多么久。所以人类对光的研究很早就开始了，但随着研究的深入，却发现光其实异常的复杂。首先光有很多特性是很容易直接观察到的。比如：直线传播、反射、折射。基于这些特点，一个很直接的猜想出现了：光是由微小的粒子组成的，也就是所谓的微粒。这样可以很好的解释直线传播、反射等特性。但光的衍射现象被观察到了，就是光透过前后排列的两个窄缝之后，产生的光带比窄缝要宽。这种表现跟水波绕过障碍物传播的特点非常接近。所以另一种自然的联想产生了：光是一种类似水波的波动。后来又有一个大名鼎鼎的实验——光的双缝干涉，点光源通过同一张纸上的两个窄缝后形成了明暗相间的条纹。波动很好的解释干涉、衍射这些现象。这就是科学史上持续300的波粒大战，期间微粒和波动各领风骚，18世纪的100年，因为牛顿的伟大著作《光学》，微粒占据绝对的优势。19世纪，麦克斯韦、赫兹在电磁学上的巨大突破，发现光是一种电磁波，波动又重获优势。直到20世纪初，爱因斯坦提出了波粒二象性的概念，这一看法被大家广泛接受，光的本质才算盖棺定论。
 
-单电子的双缝干涉
+### 单电子的双缝干涉
+
 这里先稍微解释下光的双缝干涉实验，这个实验很容易，B站上很多零成本在家就能完成实验的视频。原理就是点光源在经过两个狭缝的后形成了两束光，当两束光波分别传播到白板的时候，因为距离的不同，导致有些位置波峰和波峰相互叠加形成了亮纹，相邻位置波峰和波谷相互削弱就形成了暗纹。接下来让我们回到电子，作为基本粒子的一员，理所当然被认为是微粒。但通过实验发现单电子也能形成双缝干涉。具体过程是这样的，把电子一个一个的向着双缝发射，双缝后有一块屏幕，用来记录电子到达屏幕时的位置。同时发射电子时会保证当前一个电子出现在屏幕后，才会发射下一个电子，确保一前一后的两个电子之间不会相互影响。令人意想不到的结果发生了，当发射电子的数量足够多时，屏幕上居然出现了明暗相间的干涉条纹，一如光的双缝干涉。让我们来捋一捋这里的诡异之处，首先，在客观条件都相同的情况下发射出电子，出现在屏幕的位置居然不是固定的；其次，大量电子的位置最终组成了干涉条纹，要知道每个电子被发射的时候，前一个电子都已经打到屏幕上了，按照微粒的逻辑来看，怎么也不可能出现条纹。难道电子其实是个波？按照波的方式同时经过了两条缝，发生了干涉。有了这个猜测，只要有办法观测到电子是不是同时经过了双缝就行了。这种小问题肯定难不倒我们的科学家，只要在双缝上同时装一个感应线圈，只要有电子经过的时候会产生感应电流，这样就能直到电子到底经过哪条缝。无论如何你也猜不到这次的实验结果：每次只有一个线圈感应到电子，说明电子只通过了一条缝，并且屏幕上图像也随之改变，屏幕上只有两条亮纹，之前的干涉条纹消失了。但只要一把线圈去掉，立马又会形成干涉条纹。这也太奇怪了吧。感应线圈其实是一种观测电子路径的方式。所以到目前为止的实验结果，稍微抽象的概括一下就是：当通过观测确定了电子的路径之后，电子就按照微粒的方式运动；但只要不观测电子的路径，电子就按照波的方式运动。
 量子理论对此的解释是：在我们没有观察之前，一个粒子的状态是不确定的，他的波函数弥散开来，代表它的概率，粒子没有准确的位置，只有在各个位置出现的概率。当我们探测以后，波函数坍缩，粒子随机的取一个确定值出现在我们面前。这个解释一般人都没法理解，毕竟量子理论的奠基人之一玻尔都说过：“如果谁不为量子论而感到困惑，那他就是没有理解量子论”。
 下面我们简单一下哥本哈根学派的量子力学基本观点：
@@ -19,15 +21,17 @@ categories: 物理
 海森堡的不确定性原理：一个粒子的位置和动量无法同时被确定。
 玻尔的互补原理：粒子具有波粒二象性；研究粒子的本质是没有意义的，所有的属性都是和观测连在一起的。电子是粒子还是波，取决于我们如何观察它。
 
-量子纠缠
-就连伟大的爱因斯坦也对量子理论感到十分困惑，他不止一次的说到：上帝不掷骰子。爱因斯坦认为量子理论是不完备的，他一直试图证明这一点。在1935年爱因斯坦等三人共同发表了论文，提出了一个思想实验——ERP详谬。具体是这样，让我们想象一个粒子，本身的自旋为0。但它不稳定，很快就衰减成两个小粒子，向相反的两个方向飞开。假设小粒子有两种可能的自旋，分别是“上”和“下”，那么如果粒子A的自旋为“上”，那么粒子B的自旋便一定是“下”，这样才能保持总体的能量守恒，反之亦然。现在我们开始观察粒子A，于是它的波函数坍缩了，随机选择了一种自旋状态，比如说“上”。但因为我们知道两个粒子总体要守恒，那么现在粒子B肯定就是“下”旋。那么问题来了，在观测之前，两个粒子可能已经距离非常远了，比如几万光年。它们怎么能及时通信，做到在A坍缩成“上”的一瞬间，B也一定会坍缩成“下”呢？假设在宇宙的两端有两个观察者，同时观察了两个粒子，那么得到的结果一定是一上一下。两个粒子居然拥有了传说中的心灵感应，能瞬间感知到对方的状态，简直不可思议！显然对爱因斯坦来说，超过光速的感应是不存在的，那唯一可能的解释就只有两个粒子在分开的一瞬间，其状态就已经客观的确定了，后来的观察只是获取信息而已，并不存在什么观察之前是概率云，观察之后才有确定的状态。ERP详谬也被称作量子纠缠，这在唯心者看来简直是等同于心灵感应。
+### 量子纠缠
+
+伟大的爱因斯坦也对量子理论感到十分困惑，他不止一次的说到：上帝不掷骰子。爱因斯坦认为量子理论是不完备的，他一直试图证明这一点。在1935年爱因斯坦等三人共同发表了论文，提出了一个思想实验——ERP详谬。具体是这样，让我们想象一个粒子，本身的自旋为0。但它不稳定，很快就衰减成两个小粒子，向相反的两个方向飞开。假设小粒子有两种可能的自旋，分别是“上”和“下”，那么如果粒子A的自旋为“上”，那么粒子B的自旋便一定是“下”，这样才能保持总体的能量守恒，反之亦然。现在我们开始观察粒子A，于是它的波函数坍缩了，随机选择了一种自旋状态，比如说“上”。但因为我们知道两个粒子总体要守恒，那么现在粒子B肯定就是“下”旋。那么问题来了，在观测之前，两个粒子可能已经距离非常远了，比如几万光年。它们怎么能及时通信，做到在A坍缩成“上”的一瞬间，B也一定会坍缩成“下”呢？假设在宇宙的两端有两个观察者，同时观察了两个粒子，那么得到的结果一定是一上一下。两个粒子居然拥有了传说中的心灵感应，能瞬间感知到对方的状态，简直不可思议！显然对爱因斯坦来说，超过光速的感应是不存在的，那唯一可能的解释就只有两个粒子在分开的一瞬间，其状态就已经客观的确定了，后来的观察只是获取信息而已，并不存在什么观察之前是概率云，观察之后才有确定的状态。ERP详谬也被称作量子纠缠，这在唯心者看来简直是等同于心灵感应。
 量子论是这么解释的，在观测之前，没有一个什么粒子的“自旋”！因为你没有定义观测方式，那时候谈论自旋的粒子是无意义的，它根本不是物理实在的一部分，这不能用经典语言来表达，只有波函数可以描述。因此，在观察之前，两个粒子，无论相隔多远都好，仍然是一个互相关联的整体！它们仍然必须被看作母粒子分裂时的一个全部，直到观察以前，这两个独立的粒子都是不存在的，更谈不上客观的自旋状态！
 
-延迟选择实验
+### 延迟选择实验
 在爱因斯坦诞辰100周年，惠勒提出了一个新的思想实验。上文中已经解释了电子的双缝干涉实验，在不观测的时候，它通过双缝，并产生干涉条纹。在观测的时候，它只通过一条缝，也就不会有干涉条纹。那么就可以“延迟”电子的决定，让它在通过双缝之后，再来选择是通过一条缝还是两条缝。具体来说，我们可以用涂着半镀银的反射镜来代替双缝。如果把一块半射镜和光子的入射途径摆成45度角，那么这个光子有一半可能直飞，另一半可能被反射。这样一来，它就有了两条可能的前进路径，这跟双缝实验里，电子可以选择左边或者右边的路径在本质上是一样的。不过，只要我们愿意，我们同样可以让这个光子“同时沿着两条路径而来”：只要在终点处再插入一块同样呈45度角的半镀银反射镜，然后仔细安排位相，我们完全可以让这个光子“自我干涉”，在一个方向上抵消，而只在另一个方向出现。这样做，就好比让电子同时通过两条狭缝而产生干涉图纹，按照量子派的说法，因为发生了干涉，光子必定“同时经过了两条道路”，就像同时通过了双缝一样！
 总而言之，如果我们不在终点处插入半反射镜，光子就沿着某一条道路而来，反之，它就同时经过两条道路。现在的问题是，是不是要在终点处插入反射镜，我们可以在“最后关头”才做出决定，而这时候理论上光子早就通过了第一块反射镜，这个事件已经成了过去。然而，有趣的是，它却必须在快到达终点的时候，根据我们的选择，反过去决定自己当初到底走的是“一条路”还是“两条路”。也就是说，它必须根据“未来”的事件，去选择自己的“过去”应该怎样发生！
 这个思想实验看起来挺匪夷所思的，但已经被真实实验证实了的。如同上面的 ERP 的详谬，量子理论对延迟选择的解释基本不变，任何一种基本量子现象只在其被记录之后才是一种现象。光子在一开始还是最后才决定自己的“选择”，是没有区别的。因为在量子论中，历史不是确定和实在的，除非它已经被记录下来。
 
+### 薛定谔的猫
 讲到这里，其实薛定谔的猫就是很容易理解的思想实验了。假设有一个放射性原子，何时衰变时完全概率性的，只要不观察，它就处于衰变和不衰变的叠加态中。在假设有一种设计精密的盒子，里面有这个原子和一只猫，只要原子一衰变，就会触发盒子中的毒气，猫就会被毒死。而原子不衰变，那猫就可以活下来。这样一来，基于量子理论的自然推论就是：当没有观察时，这个原子处于衰变和不衰变的叠加态。因为原子状态不确定，那么毒气是否被触发也就不确定，而毒气状态不确定，就导致猫的状态也不确定。只有当我们打开盒子之后，才知道猫到底是死是活。那么在没打开盒子之前，猫是什么状态？唯一的解释就是猫也跟原子一样处于叠加态，一种生与死的叠加态。原子是我们看不见摸不着的，你要说它处于什么叠加态，我也不好反驳你。但猫？生与死的叠加态？
 薛定谔的猫之所以如此著名，是因为它把量子效应放大到了我们的日常世界，同时也放大了量子理论与宏观世界冲突。基于这种思路甚至后来衍生出一个论调：当我们不观察时，月亮是不存在的。我们或许可以稀里糊涂的接受量子叠加态，但月亮的存在与否居然与观察有关？这还是严肃的科学吗？
 
