--- a/_posts/2023-7-29-SH600004.md
+++ b/_posts/2023-7-29-SH600004.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: "白云机场浅谈"
+date: 2023-7-29 23:07:24
+categories: 公司分析
+---
+
 # 简介
 当前市值325.66亿，大股东是广东省机场管理集团，持股57%，实控是广东省国资委。机场主基地航司是南方航空，国内占比超过半数，同时国航、东航、海航也在白机实现了基地化运作。当前拥有两座航站楼，三条跑道, 年旅客吞吐量8000万人次。三期扩建工程总投资544.2亿元，有望于 2025 年底投产，终端容量规模将达到旅客吞吐量 1.4 亿人次、货邮吞吐量 600 万吨。
 
