--- a/_posts/2023-4-16-SZ000089.md
+++ b/_posts/2023-4-16-SZ000089.md
@@ -5,13 +5,13 @@ date: 2023-04-16 23:07:24
 categories: 公司分析
 ---
 
-# 开个头
+## 开个头
 最近对机场关注比较多，机场业务的特点
 1. 重资产，但经营现金流充沛
 2. 区域垄断
 3. 业务简单，容易理解
 
-# 简介
+## 简介
 航站楼面积 45.1 万平米，卫星厅已于2021年12月7日正式启用，面积近 24 万平米，设计年旅客吞吐量2200万人次，总投资额68.1亿元，T3航站楼+卫星厅设计旅客量达到6700万人次。
 
 第三跑道建设中，未来的深圳机场，将建成“三个航站区、三条跑道、一个卫星厅”的全新布局。三跑道项目总投资 123.3 亿元，2021年1月1日开工，预计2024年建成，建成后可以满足 2030 年旅客吞吐量 8000 万人次、货邮吞吐量 260 万吨的目标。
@@ -22,7 +22,7 @@ categories: 公司分析
 
 当前市值 156 亿。
 
-# 资产分析
+## 资产分析
 2020年总资产约251亿，约23亿流动资产，227亿非流动资产，非常重的重资产公司，其中固定资产132.5亿，使用权资产60.6亿。这是行业特点决定的。
 
 21年新增了44亿长期借款，可以以较低的成本获取专项债；62亿租赁负债（财报里没有写租赁负债具体是啥），负债率急剧上升。但短期负债一直是0，基本没有财务风险。
@@ -34,7 +34,7 @@ categories: 公司分析
 1．机场工程投资118．5亿元，由深圳市人民政府安排市本级财政公共预算解决。
 2．空管工程投资4．8亿元，由民航局安排民航发展基金解决。
 
-# 经营分析
+## 经营分析
 2019年之前营业收入几乎直线增长，与客流量增长呈现较强的正相关。其中航空业务收入占比超过八成。
 
 整体收入构成
@@ -48,10 +48,10 @@ categories: 公司分析
 
 财务费用3.64亿，21年为1.26亿，历史最高，长期借款和租赁负债相关利息增加。
 
-## 亏损11亿？
+### 亏损11亿？
 经营活动现金流净额3亿，同比减少近70%，主要是经营活动现金流入减少所致。好的一面是会对接下来的两年会产生一定的节税效果。
 
-### 非航业务分析
+#### 非航业务分析
 非航业务受到旅客结构影响比较大，其中增长潜力最大的免税收入跟国际客流直接挂钩，而当前国际客流占比只有10%。
 
 目前免税业务由深免运营，深免历史免税品规模相对较小，2021 年市占率仅为 2.1%，品类、价格相对而言并不具备优势，且深圳机场历史国际航线主要集中在东南亚地区，洲际航线客流较小，同时在地理上，深圳临近香港造成消费分流，机场免税购物规模发展较慢。
@@ -60,36 +60,36 @@ categories: 公司分析
 
 机场商业方面，2021 年机场商业租赁收入超过 3 亿，2021 年底卫星厅投入后相关收入有望实现进一步增长，疫情彻底消退后机场商业收入增长值得期待。
 
-# 竞争
+## 竞争
 珠三角机场密集，国际枢纽就有深圳机场、白云机场、香港机场。深圳机场在之前由于国家定位的问题，发展上一直落后于白云机场和香港机场。但随着近年来深圳经济发展迅猛，GDP在几年前就超过广州和香港，同时深圳机场提升到了国际枢纽的定位，有着更巨大的发展潜力。
 
-# 未来发展
+## 未来发展
 第三跑道已动工、计划于2024年建成，三条跑道设计目标2030年旅客吞吐量8000万人次。公司目前亦在积极开展T4航站楼规划设计研究。疫情前计划：根据人民网疫情前报道，深圳机场计划从十三五到“十四五”末（2025年），分两个阶段全面提升机场国际化水平。第一阶段要求，到2020年，深圳机场国际客货运航线将争取达到65条，其中直飞洲际远程客运航线要达到10条以上，机场国际旅客吞吐量达到550万人次，在总旅客量中占比不低于10%，国际中转旅客占国际旅客比例不低于15%，全面实现国内干线机场向国际枢纽机场的转型升级。国际货邮吞吐量争取达到39万吨，在总货邮中占比不低于30%。第二阶段要求，到2025年，国际客货运航线将达到90条，其中直飞洲际远程客运航线15条以上，国际旅客量将达1500万人次，在总客流中占比将提升至20%以上，缩小与全球知名国际航空枢纽发展差距，大幅提升国际航空枢纽地位。国际年货邮吞吐量则将超过70万吨，占总货邮比重也将进一步上升至40%以上。疫情打乱深圳机场高速发展节奏，疫情前旅客量相关目标的实现将推迟实现。疫情后计划：2022年5月6日，深圳市交通运输局正式发布《深圳建设交通强市行动计划（2021-2025年）》，到2025年，机场年旅客吞吐量超过7000万人次，其中国际及地区旅客吞吐量超过1000万人次，年货邮吞吐量达到210万吨；此外，机场国际航线突破100条，此目标高于疫情前要求。
 > 以上内容摘自互联网
 
-# 具备一定隐蔽资产型公司的
+## 具备一定隐蔽资产型公司的
 1. 固定资产都是按造价计算账面价值，但随着时间推移，跑道和航站楼的重置成本只会越来越高，但固定资产不会重新定价。
 2. 航站楼和跑道的使用寿命保守估计长达35年，造价合理的机场往往10年内便能收回成本。其后20余年，不仅现金流远好于净利润，折旧减少净利润，但不会由实际的现金流出，同时收费还能随着通货膨胀持续提高。
 
 在今年消费复苏大环境下，看好23年客流量回到2019年的水平，经营现金净额10亿。在未来10年这个时间尺度里，民航业客运量每年8%到10%的增速是确定性较高的。疫情三年，对机场客流打击巨大，但机场的建设没有停止，经营能力在实打实的增长。深圳机场的发展远没有到上限，未来客流量和营收的增长是高度确定的。
 
-# 重要长期股权投资
+## 重要长期股权投资
 直接持有21%成都双流机场的股权，2019年双流机场总资产 61亿，负债30亿，营业收入23亿，净利润2亿。股权账面价值6亿，收到股利2000w。2019年客流量5500w，大于深圳机场的5200w。
 
 成都天府国际机场计划投用时间为2021年7月，中国国际航空、四川航空、成都航空将两场运行，中国东方航空部分商务航线保留在成都双流国际机场，西藏航空可保留成都双流国际机场运营，其他航司均在成都天府国际机场运营。成都天府国际机场转场周期为4个航季（即2年）左右，涉及航班迁移计划和数量的相关方案正在制定中。成都天府国际机场转场投运工作结束后，成都双流国际机场将保留约460个日进出港客运航班（目前为1100架次左右），主要运营国内商务航线和港澳台地区航线，保障国际公务航空业务和国际备降航班。
 
 结论：天府分流影响很大，后续需要持续观察双流机场的运营情况。
 
-# 前十大股东
+## 前十大股东
 科威特政府投资局、社保基金，有两个价值投资风向标
 
-# 总结
+## 总结
 深圳机场当下具备不错的投资价值。虽然疫情这几年业绩显示亏损，但经营现金流一直没有任何问题，最难的2022年，也有3亿的经营现金净额。另一方面在机场发展过程中，能筹措到比较低成本的机场建设专项债。随着卫星厅和三跑道的陆续投入使用，客流量恢复至2019年，并继续增长，也是高度确定的事情。
 
-# 未来估值提升空间
+## 未来估值提升空间
 未来国际枢纽机场的估值体系会由公用事业股到消费股的转换，上海机场是机场行业的优秀代表。如果国际客流和免税业务能稍有起色，那么就会带来超出预期的惊喜。
 
-
+## 参考资料
 集团年报查询地址
 https://www.szairport.com/szairport/jcjtnb/gywm_dlm_list.shtml
 参考研报
