--- a/_posts/2023-7-29-SH600004.md
+++ b/_posts/2023-7-29-SH600004.md
@@ -5,10 +5,10 @@ date: 2023-7-29 23:07:24
 categories: 公司分析
 ---
 
-# 简介
+## 简介
 当前市值325.66亿，大股东是广东省机场管理集团，持股57%，实控是广东省国资委。机场主基地航司是南方航空，国内占比超过半数，同时国航、东航、海航也在白机实现了基地化运作。当前拥有两座航站楼，三条跑道, 年旅客吞吐量8000万人次。三期扩建工程总投资544.2亿元，有望于 2025 年底投产，终端容量规模将达到旅客吞吐量 1.4 亿人次、货邮吞吐量 600 万吨。
 
-# 当前复苏情况
+## 当前复苏情况
 2023上半年实现飞机起降架次 21.56 万架次、旅客吞吐量 2893.67 万人次、货邮吞吐量 90.84 万吨。预计实现净利润 1.4亿-1.7亿。
 
 2019年上半年完成航班起降 24.07 万架次、旅客吞吐量 3564.64 万人次、货邮吞吐量 90.57 万吨，营业收入 38.6 亿，净利润 4.28 亿。
@@ -17,7 +17,7 @@ categories: 公司分析
 
 整体复苏情况是不错，其中国内情况基本已经回到2019年同期水平，但国际相对恢复的比较慢。
 
-# 资产负债
+## 资产负债
 流动资产 34.84 亿，其中货币资金 22.26 亿；非流动资产 234.56 亿，其中固定资产 186.5 亿，在建工程 6.1 亿，总资产 269.4 亿。
 
 流动负债 69.16 亿，没有短期借款，经营相关的负债也很少，主要是其他应付款 44.62 亿，感觉有点奇怪，专门去看一下明细，应付工程款就有 32 亿，并备注解释到主要是二期扩建项目的工程款。二期工程2018年就启用了，居然工程款现在还没结算完，虽然不太理解，但好在对主营业务没有实质影响，可以暂时放过。非流动负债 26.16 亿，总负债 95.32 亿。
@@ -26,29 +26,29 @@ categories: 公司分析
 
 显然属于典型的重资产公司，但有息负债较低，没啥风险。这里稍微解释下，三期扩建工程是机场建设集团的项目，所以在上市公司的资产负债表没有体现。项目资金来源没有在网上找到相关资料，但可以大致推测资金来源是长期地方政府专项债为主，不会对上市公司造成资金压力
 
-# 在建工程
+## 在建工程
 三期工程项目属于机场集团，建成后上市公司通过租赁的方式使用。关于三期工程公开的信息不多，只搜索到一些新闻，可以认为处于正常推进中。
 
-# 经营分析
+## 经营分析
 因为众所周知的原因，经营分析可以基于 2019 年进行。2019 白机营业收入 78.70 亿；营业成本 59.72 亿，其中人工成本 20.93 亿，折旧费 15.21 亿，销售费用 0.12亿，管理费用 4.61亿，财务费用 0.55亿，研发费用 0.28亿；营业收入 51.8亿；归母净利润 10.00 亿。
 
 营收近 80 亿，净利润才 10 亿，乍一看这个生意也不咋样。但实际是折旧 15 亿，严重拉低了利润水平，再结合公司的经营活动现金净额足足有 30 亿。答案呼之欲出：固定资产的账面折旧拉低了净利润，但公司的实际的现金流远远要比净利润要好的多
 
-# 免税收入分析
+## 免税收入分析
 机场经营的本质在网络上已经有很多讨论了，即优质流量所带来的商业变现。在当下，最有效的变现方式就是免税业务了。白云机场 2019 免税销售额约 19 亿元，客单价 103 元，23年1月客单价 118 元，创历史最佳。同时参考上海机场，2019 年免税销售 138 亿元，客单价约358元。可以看出，公司的免税业务仍在高速发展中，无论是总量还有单价方面都有足够的增长空间。
 
 对于免税业务来说，国际客流是关键。虽然已经全面放开，但随着中美在各个领域的持续对抗，国际客流的恢复远低于国内客流。以东南亚为主的白机国际客流恢复速度是最快的，呈现逐月改善的趋势，6月已恢复至19年同期的47%。19年国际客流量 1700 万，占比约 23%。可以判断，国际客流恢复到 2019 年的水平，大概率还需要超过一年的时间。
 
 可以预料的是，短期内白云机场的免税业务不太会有明显的爆发式增长。
 
-# 大湾区机场分析
+## 大湾区机场分析
 白云机场面临两个强劲的对手：香港机场和深圳机场。香港机场在国际旅客方面的优势是无可比拟的，而深圳 GDP 也超过广州好几年了。随着大湾区一体化的加深，三个机场的竞争也会加剧。大家都看到的坏处是旅客将被分流，但好处其实也有，能促进提升机场的运营水平。这部分没有太多的客观分析，就直接抛一个个人观点：大湾区的经济活力是能够承载三个机场的同时发展的，而且必要的良性竞争是有利于长期发展的。
 
-# 估值
+## 估值
 基于当前披露的业绩预告，23年的净利润大致会在 5 亿左右，24 年大概率能恢复到 2019 水平，也是 10 亿左右。因为机场的特殊性，我在估值的时候，更多参考经营现金流净额，避免过多的账面折旧拉低公司的盈利水平。
 
 
-# 未来
+## 未来
 看好白云机场的未来其实就是看好大湾区的未来。预测未来是一件非常不靠谱的事，只能在诸多的不确定性中找确定性，尤其近年来的疫情和中美对抗，更是让现实变得愈发复杂。首先，在当前的百年未有之大变局中，我觉得有两点具备极高的确定性：1. 中国经济仍然会继续增长；2. 中国经济会进一步向长三角和大湾区集聚。其次，国内的城市发展更多的体现出TOD（公共交通导向）的趋势，例如最近的新闻广深第二高铁，2029建成后，广深机场20分钟互通。在大湾区一体化交通网络的发展进程中，机场一定是处于核心地位的，有着更好的发展前景。一个很简单的逻辑，机场与大湾区经济发展的绑定是非常高的，机场建设投资拉动当地经济，当经济发展后，机场客流量则会进一步上升。
 
 综上：大湾区会继续保持高出全国平均增速的发展速度，而白云机场在这个过程中会受益巨大。
