--- a/_posts/2023-8-17-cat.md
+++ b/_posts/2023-8-17-cat.md
@@ -2,7 +2,7 @@
 layout: post
 title: "薛定谔的猫"
 date: 2023-08-17 23:07:24
-categories: 物理
+categories: 自然科学
 ---
 
 薛定谔的猫这个词我很早以前就看到过，当时就不知道啥意思，还专门去搜了一下，结果搜出来的解释却让我越看越糊涂，只能不了了之。直到最近看了一些量子论方面的科普书籍，才算大概理解了其含义。
