--- a/_posts/2023-7-29-SH600004.md
+++ b/_posts/2023-7-29-SH600004.md
@@ -51,4 +51,4 @@ categories: 公司分析
 ## 未来
 看好白云机场的未来其实就是看好大湾区的未来。预测未来是一件非常不靠谱的事，只能在诸多的不确定性中找确定性，尤其近年来的疫情和中美对抗，更是让现实变得愈发复杂。首先，在当前的百年未有之大变局中，我觉得有两点具备极高的确定性：1. 中国经济仍然会继续增长；2. 中国经济会进一步向长三角和大湾区集聚。其次，国内的城市发展更多的体现出TOD（公共交通导向）的趋势，例如最近的新闻广深第二高铁，2029建成后，广深机场20分钟互通。在大湾区一体化交通网络的发展进程中，机场一定是处于核心地位的，有着更好的发展前景。一个很简单的逻辑，机场与大湾区经济发展的绑定是非常高的，机场建设投资拉动当地经济，当经济发展后，机场客流量则会进一步上升。
 
-综上：大湾区会继续保持高出全国平均增速的发展速度，而白云机场在这个过程中会受益巨大。
+综上：大湾区会继续保持高出全国平均增速的经济发展速度，而白云机场在这个过程中会受益巨大。
