--- a/_posts/2023-09-24-医疗.md
+++ b/_posts/2023-09-24-医疗.md
@@ -48,4 +48,4 @@ categories: 公司分析
 如果迈瑞携巨资进入软镜市场？迈瑞现在已经有硬镜业务了，这个可能性还是不低的。这个问题我目前还没有很好的答案。
 
 ## 结尾
-上面就是我近两年的主要思考过程，过程中犯了不少错误，即使今天的选择，也很可能在未来出错。但我还是想把这个思考过程记录下来，作为自己学习路上的总结。
+上面就是我近两年的主要思考过程，过程中犯了不少错误，即使今天的选择，也很可能在未来被证明是错误的。但我还是想把这个思考过程记录下来，作为自己学习路上的总结。
