--- a/_drafts/2023-9-29-上海机场.md
+++ b/_drafts/2023-9-29-上海机场.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "分析一下上海机场当下的投资价值"
+title: "疫情到底让上海机场失去了什么"
 date: 2023-08-12 12:43:06
 categories: personal
 ---
 
-上海机场的
+上海机场的一篇分析
 
 2019年，上海机场营收 109 亿，非航收入68.6亿，其中商业餐饮收入54.6亿，净利润 50 亿。白云机场营收 78.7 亿，净利润 10.0 亿。赚钱能力差别太明显了。旅客吞吐量 7615w，国内旅客 3764w，国际旅客 3240w，地区旅客 611w。
 
