--- a/_posts/2023-8-17-cat.md
+++ b/_posts/2023-8-17-cat.md
@@ -69,11 +69,14 @@ categories: 自然科学
 
 这样的理论，使得世界变得不确定的，推翻了经典的因果论，爱因斯坦无法接受，所以不断质疑和反驳。薛定谔继而推出了，薛定谔的猫这个问题。如果一个粒子处于衰变和不衰变的叠加状态，那么猫就处在了死于不死的叠加状态。这个问题将量子理论带到宏观物体层面。之后，为了解释量子理论，产生了人的意识改变物质的解释和多世界理论。
 
-尽管量子理论是如此的让人困惑，但在解决实际问题的时候却非常有效，极大的改变了我们今天的生活。随便举几个例子：晶体管、激光、核磁共振，这些技术的出现都跟量子理论有着密不可分的关系。
+尽管量子理论是如此的让人困惑，但在解决实际问题的时候却非常有效，极大的改变了我们今天的生活。随便举几个例子：晶体管、激光、核磁共振，这些技术的出现都跟量子理论有着密不可分的关系。在理论物理学家不停思考量子这些特性到底意味着什么的时候，还有一大堆的实验物理学家和工程师在马不停蹄的根据量子所表现出来的这些特性，改变着这个世界，让我们作为普通人也可以拥有当下的美好生活。
 ```
 晶体管：基于量子理论发现了半导体材料的“能带理论”，这一理论揭示了半导体材料可以作为开关材料的原理，为后续发明半导体二极管和晶体管奠定了基础。
 激光：基于量子理论提出的的受激辐射，简单点说，就是通过刺激处于激发态的原子，让里面的电子跃迁到能量更低的状态，由此释放出频率一致，传播方向一致，相位一致，偏振状态一致的光子束。
 核磁共振：基本原理是原子核的不同自旋取向在强磁场下发生能级分裂，从而可以共振吸收某特定频率的电磁辐射。
 ```
+
+### 结尾
+最后还想再简单讨论一个问题：什么是科学精神。在回答这个问题之前，先来看一个叫做“奥卡姆剃刀原理”的理论：当两种说法都能解释相同的事实时，应该相信假设少的那个。举个例子：外星人存在但目前他们都离地球太远了和外星人不存在，两种看法都解释了同一个现象：目前还没发现外星人。那么根据剃刀原理，显然后者更应该相信。现在再来回想一下长达数百年的对于光和量子的波粒之争，为什么既是波又是粒子这种假设让人难以接受，不正是因为它比单纯是波或者单纯是粒子的假设多了一个假设吗？如果没有足够的实证，就没有理由同意波粒二象性的。我想这种实证精神大概就是科学精神最大的内核之一，同时也是科学的魅力所在。
 
 > 本文的内容很大程度参考了《上帝掷色子吗？：量子物理史话》，原书更加精彩，推荐阅读。
