--- a/_posts/2023-8-17-cat.md
+++ b/_posts/2023-8-17-cat.md
@@ -77,6 +77,6 @@ categories: 自然科学
 ```
 
 ### 结尾
-最后还想再简单讨论一个问题：什么是科学精神。在回答这个问题之前，先来看一个叫做“奥卡姆剃刀原理”的理论：当两种说法都能解释相同的事实时，应该相信假设少的那个。举个例子：外星人存在但目前他们都离地球太远了和外星人不存在，两种看法都解释了同一个现象：目前还没发现外星人。那么根据剃刀原理，显然后者更应该相信。现在再来回想一下长达数百年的对于光和量子的波粒之争，为什么既是波又是粒子这种假设让人难以接受，不正是因为它比单纯是波或者单纯是粒子的假设多了一个假设吗？如果没有足够的实证，就没有理由同意波粒二象性的。我想这种实证精神大概就是科学精神最大的内核之一，同时也是科学的魅力所在。
+最后还想再简单讨论一个问题：什么是科学精神。在回答这个问题之前，先来看一个叫做“奥卡姆剃刀原理”的理论：当两种说法都能解释相同的事实时，应该相信假设少的那个。举个例子：外星人存在但他们都离地球太远了和外星人不存在，两种看法都解释了同一个现象：目前还没发现外星人。那么根据剃刀原理，显然后者更应该相信。现在再来回想一下长达数百年的对于光和量子的波粒之争，为什么既是波又是粒子这种假设让人难以接受，不正是因为它比单纯是波或者单纯是粒子的假设多了一个假设吗？如果没有足够的实证，就没有理由同意波粒二象性的。我想这种实证精神大概就是科学精神最大的内核之一，同时也是科学的魅力所在。
 
 > 本文的内容很大程度参考了《上帝掷色子吗？：量子物理史话》，原书更加精彩，推荐阅读。
