--- a/_drafts/2023-10-4-企业经营与财务报表.md
+++ b/_drafts/2023-10-4-企业经营与财务报表.md
@@ -1,16 +1,20 @@
 ---
 layout: post
-title: "企业经营与财务报表"
+title: "你会摆地摊吗——分析企业经营与财务报表的关系"
 date: 2023-10-4 21:12:32
 categories: 公司分析
 ---
 
 最近为了学习看财报，把大学教材《会计学原理》翻出来看了看。
 
-让我们想象一个场景，小明作为一个有志青年，不甘心被万恶的资本家剥削，所以选择自主创业。由于经验和资金双重不足，所以决定先从最简单的摆摊卖烤肠做起。下面对经营活动进行一下简单描述：
+# 摆地摊这个生意怎么样？
+让我们先来假设生活中很常见的一个场景：小明作为一个有志青年，不愿被万恶的资本家剥削，所以选择做个小本生意。由于经验和资金双重不足，所以理智的他决定先从最简单的摆摊卖烤肠做起。这样的例子数不胜数，相信每个人身边都见过，甚至自己也干过类似的事情，无论是摆地摊或者开个小店。但大多数人可能都没有认真去想过摆摊这个生意怎么样？靠谱吗？能赚到钱吗？
+
+下面对经营活动进行一下简单描述：
 - 10.1
   - 自有资金投入600元
   - 购买小推车、烤盘等设备，支出500元 
+  - 随便找个路口摆摊，无摊位费
   - 购买50根生烤肠，支出50元
   - 购买油、调料等，预计可使用一个月，支出50元
 - 10.2
@@ -20,7 +24,8 @@ categories: 公司分析
   - 去除第一天外，共收入净现金3000元
   - 计提设备折旧50元（小推车、烤盘作为生产资料在营业过程中会有损耗，需要计提折旧，为方便计算，以10个月按照直线法进行折旧）
 
-经过了第一个月的经营，这个生意的财务报表如下所示：
+经过了第一个月的经营，这个生意的三张财务报表如下所示：
+> 资产负债表、利润表、现金流量表是反映企业经营活动的最重要的三张财务报表，上市公司披露的财报中都会包含这三张报表。
 
 资产负债表
 | 项目 | 2023年10月1日 | 2023年11月1日 |
@@ -70,7 +75,7 @@ categories: 公司分析
 经过一个月的经营后，小明发现烤肠还是挺赚钱的，但苦于当前业务规模太小，所以赚的不多。因此，机智的小明马上想到要扩大规模，所以小明在11月进行了更加复杂的经营活动。下面简单记录的11月小明的经营活动。
 - 经营调整
   - 租用两个正规摊位，按年度付费，支出 3600 元。当前资金不足，所以通过银行申请一年期贷款 4000 元，固定月息单利 0.5%，按月还息，到期还本。
-  - 雇佣了小红，负责新摊位，月薪 2000 元，下月10号结算当月工资。
+  - 雇佣了一个人，负责新摊位，月薪 2000 元，下月10号结算当月工资。
   - 跟原材料供货商达成了新的合作协议，可以按月结清货款。
   - 为了进一步扩大规模，支持用户赊账购买，比例控制在每天销售额的1/6。
 - 11.1
@@ -141,5 +146,7 @@ categories: 公司分析
 
 现在我们来根据三张报表来看看经过两个月的折腾之后，小明的地摊生意经营情况如何。具体总结为一下几点：
 1. 600元资金起步，到现在总资产有25250，其中账上现金就有18400。
-2. 毛利率高达 56%，随着经营规模的扩大，营业收入增长迅速。
+2. 毛利率高达 56%，随着经营规模的扩大，营业收入增长迅速。但也相应的增加了经营风险，例如：收入的一部分是应收账款，存在坏账的风险。
 3. 经营活动现金流净额大于营业利润，利润含金量高。
+4. 非流动资产占比仅 15%，轻资产特点非常明显。
+
