--- a/_drafts/2023-10-6-如何写好工作文档.md
+++ b/_drafts/2023-10-6-如何写好工作文档.md
@@ -2,61 +2,112 @@
 layout: post
 title: "如何写好工作文档"
 date: 2023-10-6 22:32:18
-categories: 职业
+categories: 职业相关
 ---
 
-# 方法论
+在企业中，书写工作文档是一个很常见的工作，不过恰恰是这样一个看似寻常的工作内容，想要做好却并非易事。下面就来说说如何才能写出一篇好的工作文档，具体会从介绍一下写文档的通用方法论，然后会从方案、调研、述职这三种常见的文档类型来进行详细说明。
+
+# 通用方法论
 文档本质上是信息的载体，写好文档的本质就是更好的通过文档的形式来传达信息。
 ## 信息的分类
-信息大致可以区分成两大类：描述和规范。用英语来来就是：what is 和 what should be。描述性信息是表示事物的状态；规范性信息则是表示事物应有的状态，或者人应该采取怎样的行动。描述信息还可以进一步分成“记述”和“评价”。
+信息大致可以区分成两大类：描述和规范，翻译成大白话就是“是什么”和“应该怎么样”。描述性信息是表示事物的状态；规范性信息则是表示事物应有的状态。描述信息还可以进一步分成“记述”和“评价”，评价的特点是包含判断好坏的信息。
+
+一般常见的行文顺序是依次传达记述信息、评价信息、规范信息，也就是先描述事情是什么，其次是如何评价，最后再给出行动建议。
+
+那么需要注意一些注意点：
+### 避免是记述却让人理解成评价
+“该产品线上运行很稳定”和“该产品线上运行的稳定性高”，这两句话看起来表达了同样的意思，但在阅读后者的时候，阅读者常常会理解到线上运行稳定性高的比低的要好。
+### 
 
 ## 写出好的文字
 - 用字具体，少写套话
   - 不让人猜，避免误解
   - 更能触动情感
+- 不用心的文章，一眼就能看出来
 
-## 分段
-分段就是以完整区块传达单一信息
- 
-## 结构
+## 确定文章结构
+一般文章结构可以分为主要信息、关键信息、次要信息三层，可以通过自下而上、自下而上两种方式进行整理。关键信息最好是三个，最多七个，要做到不重复不遗漏。
 ```
-主要信息
-关键信息
-次要信息
+    主要信息
+  关键信息  关键信息
+次要信息  次要信息  次要信息
 ```
-自下而上
-结论法：重点在于，以下层信息群作为依据，作进一步的解释。也就是说，如果推论准确性不高，便无法称为结论，只不过是跳跃式的信息罢了，所以要避免过度推论。通过反复确认：因此呢，从而推论出没有跳跃感且相当具体的推论。
-如何提升结论的说服力？提升已知信息的覆盖率，就可以增加说服力。
-记述信息：使用因果论证法与实证论证法
-评价信息：根据评价条目或评价标准来论证
-规范信息：行动原理的论证方法
+### 自下而上
+自下而上的做法是先基于主题收集底层信息，然后以下层信息群作为依据，作进一步的解释。解释的方式有两种：推论和摘要。
+```
+    主要信息
+        ^
+        | 
+  关键信息  关键信息
+        ^
+        | 推论：通过反复确认“因此呢”，得出没有跳跃感且相当具体的推论。
+        | 摘要：抽取出潜藏在事物背后的共同本质，核心是将具体的信息抽象化。
+次要信息  次要信息  次要信息
+```
+理解原理之后，需要注意下面几点：
+1. 避免过度推论。如果推论准确性不高，便无法称为结论，只不过是跳跃式的信息罢了。
+2. 提升结论的说服力。提升已知信息的覆盖率，就可以增加说服力。
+3. 抽象思考的摘要，不是删除而是萃取。抽象化就是将事物模型化。
+4. 实际需要二者结合。先抽象再推论或者先推论再抽象，要追求适度的抽象，太具体和太抽象都很难懂。
 
-摘要法：把多个具体信息整理为一个抽象信息
-如果说结论法是从无到有，那么摘要法则是抽取出潜藏在事物背后的共同本质。核心是将具体的信息抽象化。
-抽象思考的摘要，不是删除而是萃取。抽象化就是将事物模型化。
+### 自上而下
+相反的，自上而下就是把上层信息拆解成下层信息。具体的拆解方法有两种：理由法，把下层信息定义成上层信息的理由；详述法，对下层信息进行详细说明。
 
-在实际中，通常需要二者结合。先抽象再推论或者先推论再抽象
-要追求适度的抽象，太具体和太抽象都很难懂。
+## 讲故事的技巧
+有了文章结构后，接下来就开始具体填充内容了，也就是人们常说的讲故事了。介绍一个简单的架构，SCR模型。S-situation 代表背景信息，C-complication 代表冲突挑战，R-resolution 代表解决方案。
 
-自上而下
-理由法：把下层信息定义成上层信息的理由
+### S 背景信息
+描述问题出现之前的情况，一般会强调一个正面且有价值的状态。
 
-详述法：对下层信息进行详细说明。
-
-主题金字塔
-关键主题最好是三个，最多七个
-不重复不遗漏
-
-如何陈述
-故事展开基本流程 SCQOR，缺个图
-
-问题描述过程，要让对方起共鸣。
+### C 冲突挑战
+常见的问题分为三种类型：
 · 恢复原状型：必须修复已损坏的事物，不能放任不管。
 · 预防隐患型：目前没问题，但希望将来不会损坏。
 · 追求理想型：目前没有障碍，但希望能更好。
+实际中，大多数情况多种类型的问题会同时存在，且相互关联。一般的做法是先确定核心问题的类型，之前其他问题类型以附加的形式加入进来。
 
+### R 解决方案
+· 恢复原状型：根本措施、应急处理、防止复发策略。
+· 预防隐患型：预防策略、发生时的应对策略。
+· 追求理想型：选定理想、实施策略。
 
+### 各类型的关键信息模板
+- 恢复原状型
+  - 掌握状况，是怎么损坏的；
+  - 应急处理，如何防止继续恶化；
+  - 分析原因，为什么坏掉；
+  - 根本措施，如何复原；
+  - 防止复发，以防再次出现。
+- 预防隐患型
+  - 假设不良状态，不希望事物以何种方式损坏；
+  - 诱因分析，找出导致损坏的原因；
+  - 预防策略，防止问题再次发生；
+  - 发生时的应对策略，如何降低发生时的负面影响。
+- 追求理想型
+  - 资产盘点，分析强项和弱项；
+  - 选定理想，根据实力决定目标；
+  - 实施策略，决定达成目标的顺序。
 
-方案
-调研
-述职
+# 工作文档的常见类型
+## 方案
+背景问题
+核心逻辑
+总体设计
+详细设计
+成本
+效果预估
+里程碑
+
+## 调研
+背景
+问题
+介绍
+对比
+结论
+
+## 述职
+背景
+问题
+解决
+效果
+总结
