--- a/_drafts/2023-10-6-如何写好工作文档.md
+++ b/_drafts/2023-10-6-如何写好工作文档.md
@@ -12,12 +12,11 @@ categories: 职业相关
 ## 信息的分类
 信息大致可以区分成两大类：描述和规范，翻译成大白话就是“是什么”和“应该怎么样”。描述性信息是表示事物的状态；规范性信息则是表示事物应有的状态。描述信息还可以进一步分成“记述”和“评价”，评价的特点是包含判断好坏的信息。
 
-一般常见的行文顺序是依次传达记述信息、评价信息、规范信息，也就是先描述事情是什么，其次是如何评价，最后再给出行动建议。
+一般常见的行文顺序是依次传达记述信息、评价信息、规范信息，也就是先描述事情是什么，其次是如何评价，最后再给出应该怎么做。
 
 那么需要注意一些注意点：
-### 避免是记述却让人理解成评价
-“该产品线上运行很稳定”和“该产品线上运行的稳定性高”，这两句话看起来表达了同样的意思，但在阅读后者的时候，阅读者常常会理解到线上运行稳定性高的比低的要好。
-### 
+### 避免本意是记述却让人理解成评价
+“A公司组织架构稳定”和“A公司的组织架构稳定性高”，这两句话看起来表达了同样的意思，但在阅读后者的时候，阅读者常常会理解到稳定性高高的比低的要好，但实际并不一定。
 
 ## 写出好的文字
 - 用字具体，少写套话
@@ -95,12 +94,19 @@ categories: 职业相关
 总体设计
 详细设计
 成本
-效果预估
+效果预估、推演
 里程碑
+
+方案开篇要先讲清楚问题，讲问题的过程不要全是干巴巴的描述，可以适当的通过案例或者故事，这样才能有代入感，更好的触动读者的情感。有些当问题清晰之后，解决方案就是水到渠成的。但也存在着一些复杂情况，解决方案是不明确的，这种情况下要注重理顺问题和方案之间的逻辑关系——即为什么当前方案能够解决问题。否则读者就会产生明显的疑问：不认为该方案能解决问题。一旦读者产生了这样的疑问，那么无论方案设计的多么完美，都无法让人信服。
+
+在具体描述方案设计的过程中，对于复杂的方案，不要试图一次性就能把方案讲清楚，要按照先总体再局部的原则进行描述，最好还能辅以图形帮助读者理解，包括但不限于流程图、架构图、脑图。另外需要注意的是描述过程要详略有度，不要过分陷入方案细节，但也不能毫无细节，全是抽象的概述，要结合抽象化的总体概览和核心细节展示。刚开始写文档的时候这个尺度不容易掌握，可以选择的做法是按照自己认为详略有度的方式写好之后，找其他人帮忙试读一下，根据反馈再进行调整。
+
+接下来是成本的部分。任何脱离实现成本来谈的方案都是耍流氓，而成本往往是现实中最大的制约因素。具体谈成本的时候，一般从两个方面：时间成本和经济成本。时间成本就是多久，经济成本则需要梳理出来所有需要花钱的部分，其中还要包括人力成本。、
+
+最终需要描述方案的效果，理想情况是通过这一部分的内容为读者勾勒出方案实现后的美好情景。这就好比售楼处的样板房，无论销售说的多么天花乱坠，都比不上一个精心布置的样板房给客户带来那种眼见为实的体验。这里重点说一下效果推演，可以通过推演的方式把问题在新的方案下模拟一遍，如果问题都能被很好的解决，那么就能说明方案的最终效果。这个过程就类似于战术沙盘模拟，如果在沙盘上都无法取胜，那实际效果也就可想而知了。
 
 ## 调研
 背景
-问题
 介绍
 对比
 结论
