--- a/_posts/2023-10-22-如何写好工作文档.md
+++ b/_posts/2023-10-22-如何写好工作文档.md
@@ -168,7 +168,7 @@ categories: 职业相关
 
 然后是效果呈现，一般通过前后对比的方式，呈现出解决后的效果。需要注意的是，如何选择合适的方式来体现效果。因为在一些知识型工作中，效果往往不容易直观的呈现。还是通过之前的例子说明，通过合理的流程改进提升了工作效率，那么工作效率提升怎么衡量呢？有人可能会说，这不很简单吗？这个月干的活比上个月多，不就行了，工厂记件不就是这个道理。但现实是知识型工作往往每个月的任务都十分不同，而任务本身就有难易之分，所花费的时间本就有所不同，显然无法通过记件来体现。在这个例子里，可以选择定性的方式呈现，流程改进后去掉哪些无效流程，所需步骤的减少必然带来时间花费的减少。实际情况千变万化，但可以把握住一个原则，效果呈现部分要有事实支撑，不能泛泛而谈，优先定量分析，其次定性分析。最后说个一个小技巧，对于有一定专业性的数据，最好通过一些简单的类比来加深读者的印象。相信大家都对香飘飘的广告词有印象：“一年卖出三亿多杯，杯子连起来可绕地球一圈”，想想广告这么多，为啥这句话能被大家记住？秘诀就在后半句的类比。
 
-最后是总结，什么画龙点睛、升华主旨之类的大家都看过很多。但基于我个人的实践来说，总结想要写出彩很难，一般来说对于还是一个中规中矩的总结，把更多时间放在写好上面讲的几个环节。另外注意总结部分最好顺带一下未来展望，这样述职的方方面面就全了。
+最后是总结，什么画龙点睛、升华主旨之类的大家都看过很多。但基于我个人的实践来说，总结想要写出彩很难，一般来说还是一个中规中矩的总结，把更多时间放在写好上面讲的几个环节。另外注意总结部分最好顺带一下未来展望，这样述职的方方面面就全了。
 
 # 结尾
 上面写了很多，这里简单的总结一下：首先要写好工作文档，存在着基本的方法论，是可以学习并练习的；其次书写过程要先确定文档结构，再填充具体内容；最后是文档内容要通过讲故事的方式提升可读性。
