--- a/_posts/2023-10-21-如何写好工作文档.md
+++ b/_posts/2023-10-21-如何写好工作文档.md
@@ -69,10 +69,10 @@ categories: 职业相关
 自下而上的做法是先基于主题收集底层信息，然后以下层信息群作为依据，作进一步的解释。解释的方式有两种：推论和摘要。
 ```
     主要信息
-        ^
+       /|\
         | 
   关键信息  关键信息
-        ^
+       /|\
         | 推论：通过反复确认“因此呢”，得出没有跳跃感且相当具体的推论。
         | 摘要：抽取出潜藏在事物背后的共同本质，核心是将具体的信息抽象化。
 次要信息  次要信息  次要信息
@@ -89,8 +89,8 @@ categories: 职业相关
 在实际运用中的思考方式：为了让上层信息更有说服力，需要哪些下层信息做支撑。举个例子，一篇文档的主要信息是：xx公司具备很好的投资价值。那么基于投资价值的评价方式，关键信息就可以大致分为：业务情况、财务情况、未来前景。再继续往下就得到了次要信息，业务情况分为：产品介绍、商业模式、市场地位。财务情况分为：资产负债、营业利润、现金流。
 
 ## 讲故事的技巧
-在有了文档结构后，接下来就开始具体填充内容了，也就是人们常说的讲故事了。一个好的故事有以下几条标准：
-1. 你要讲的，和我有什么关系？
+在有了文档结构后，接下来就开始具体填充内容了，也就是人们常说的讲故事了。好的故事有以下几条标准：
+1. 从读者的角度出发
 2. 有冲突，不是流水账
 3. 有场景和视觉化的呈现
 4. 有真实情感
@@ -99,6 +99,7 @@ categories: 职业相关
 在写文档之前我们一定要先想清楚写文档的目的，就是想要通过文档给读者传达什么。在确定文档目的的情况，要通过故事线把文档内容串起来。好的故事会有一明一暗两条故事线。明线通常是叙述线，基本就是故事的发展顺序。暗线通常是情感线，可以是心理活动或者意识转变。在工作文档中，我们经常会忽略情感线，导致文档阅读起来索然无味，因为情绪本身才是最能引起读者共鸣的内容。但需要注意，暗线之所以是暗线，一般是不会直接说的，所以要避免在工作文档中包含太多的个人情感，出现喧宾夺主的情况。
 
 举个例子，在工作汇报中，首先在明面上一定是让上级了解工作进展和成果，其次在暗地里还希望自己的工作得到上级的支持和认可。那么暗线就可以是在面对困难，解决困难过程中的心理变化。
+
 ### 故事架构：SCR模型
 介绍一个简单的架构，SCR模型。S(Situation) 代表背景信息，C(Complication) 代表冲突挑战，R(Resolution) 代表解决方案。
 
@@ -106,16 +107,17 @@ categories: 职业相关
 描述问题出现之前的情况，一般会强调一个正面且有价值的状态。
 
 ### C 冲突挑战
-常见的问题分为三种类型：
-· 恢复原状型：必须修复已损坏的事物，不能放任不管。
-· 预防隐患型：目前没问题，但希望将来不会损坏。
-· 追求理想型：目前没有障碍，但希望能更好。
+常见的冲突分为三种类型：
+- 恢复原状型：必须修复已损坏的事物，不能放任不管。
+- 预防隐患型：目前没问题，但希望将来不会损坏。
+- 追求理想型：目前没有障碍，但希望能更好。
 实际中，大多数情况多种类型的问题会同时存在，且相互关联。一般的做法是先确定核心问题的类型，之前其他问题类型以附加的形式加入进来。
 
 ### R 解决方案
-· 恢复原状型：根本措施、应急处理、防止复发策略。
-· 预防隐患型：预防策略、发生时的应对策略。
-· 追求理想型：选定理想、实施策略。
+对于三种冲突，分别对应着不同的解决方案：
+- 恢复原状型：根本措施、应急处理、防止复发策略。
+- 预防隐患型：预防策略、发生时的应对策略。
+- 追求理想型：选定理想、实施策略。
 
 ### 各类型的关键信息模板
 - 恢复原状型
@@ -171,7 +173,7 @@ categories: 职业相关
 最后是总结，什么画龙点睛、升华主旨之类的大家都看过很多。但基于我个人的实践来说，总结想要写出彩很难，一般来说还是一个中规中矩的总结，把更多时间放在写好上面讲的几个环节。另外注意总结部分最好顺带一下未来展望，这样述职的方方面面就全了。
 
 # 结尾
-上面写了很多，这里简单的总结一下：首先要写好工作文档，存在着基本的方法论，是可以学习并练习的；其次书写过程要先确定文档结构，再填充具体内容；最后是文档内容要通过讲故事的方式提升可读性。
+上面写了很多，这里简单的总结一下：首先要写好工作文档，存在着基本的方法论，是可以学习并练习的；其次书写过程要先确定文档结构，再填充具体内容；最后是文档内容要通过讲故事的方式提升可读性。当然，实际工作中书写文档的情况千变万化，就需要我们在学习中不断实践，逐步提升自己的文档书写能力。
 
 最后是推荐阅读的书籍：
 - 《麦肯锡教我的写作武器》
