--- a/_posts/2023-10-21-如何写好工作文档.md
+++ b/_posts/2023-10-21-如何写好工作文档.md
@@ -135,10 +135,11 @@ categories: 职业相关
   - 资产盘点，分析强项和弱项；
   - 选定理想，根据实力决定目标；
   - 实施策略，决定达成目标的顺序。
+
 大家行文时可以直接参考上述信息模板。
 
-
 # 工作文档的常见类型
+上面的通用方法中介绍了基本书写文档的基本方法，接下来会具体介绍三种类型的常见文档。
 ## 方案
 方案是最常见的文档类型，简单说就是描述一个问题的解决办法。在工作中因为机会成本的原因，对于重要问题，需要有详细的方案论证过程。一般的行文顺序是背景问题、核心逻辑、总体设计、详细设计、成本、效果预估（推演）、里程碑。
 
