--- a/_posts/2023-10-21-如何写好工作文档.md
+++ b/_posts/2023-10-21-如何写好工作文档.md
@@ -158,7 +158,7 @@ categories: 职业相关
 
 其次是要确保调研过程中信息收集的准确性和全面性。信息的质量直接决定后续分析过程的质量。最好可以简要描述信息收集的过程，从而增加信息收集的可信度。比如最近招行发布的《2023中国私人财富报告》，开篇前言部分就介绍了调研方法：“在对4000多份高净值人群调研问卷进行详细分析的基础上，我们还深入走访北京、上海、深圳、广州、杭州、南京、武汉、重庆、西安、青岛、沈阳、厦门、香港、常州、绍兴、唐山、呼和浩特等城市，对每一位接受邀约的高净值客户进行了深入访谈，深切理解了中国高净值人群在当下的需求与感悟”，概括下就是调查问卷结合多城市访谈的调研方式。全面性是指重要信息不能遗漏。比如做市场调研报告，只讲产品品质多么好，客户有多么的喜爱，而不讲与市场中同类产品的定价和市占率。那么无论产品品质讲述的多么活灵活现，也很难称之为好的市场调研。
 
-接下来是分析评价的过程，一般是按照几个评价的纬度对调研对象进行对比分析。评价纬度的选取要客观，可以参考行业内的通用标准，比如对于市场竞争分析里的五力模型：供应商的讨价还价能力、购买者的讨价还价能力、潜在竞争者进入的能力、替代品的替代能力、行业内竞争者现在的竞争能力。即使我们要调研的领域是一个全新的领域，也不要盲目的自己定义评价纬度，可以试着去参考相邻行业的评价维度。在充分思考的定义出合理的评价维度。
+接下来是分析评价的过程，一般是按照几个评价的纬度对调研对象进行对比分析。评价纬度的选取要客观，可以参考行业内的通用标准，比如对于市场竞争分析里的五力模型：供应商的讨价还价能力、购买者的讨价还价能力、潜在竞争者进入的能力、替代品的替代能力、行业内竞争者现在的竞争能力。即使我们要调研的领域是一个全新的领域，也不要盲目的自己定义评价纬度，可以试着去参考相邻行业的评价维度。在充分思考后定义出合理的评价维度。
 
 最后是结论部分，调研的结论需要注意避免跳跃，宁愿保守一点，也要确保逻辑的连续性，切忌夹带自己的主管倾向，否则一个不恰当的结论可能导致整篇调研失去可信度。
 
