--- a/_drafts/2023-9-29-上海机场.md
+++ b/_drafts/2023-9-29-上海机场.md
@@ -2,14 +2,33 @@
 layout: post
 title: "疫情到底让上海机场失去了什么"
 date: 2023-08-12 12:43:06
-categories: personal
+categories: 公司分析
 ---
 
-上海机场的一篇分析
-
-2019年，上海机场营收 109 亿，非航收入68.6亿，其中商业餐饮收入54.6亿，净利润 50 亿。白云机场营收 78.7 亿，净利润 10.0 亿。赚钱能力差别太明显了。旅客吞吐量 7615w，国内旅客 3764w，国际旅客 3240w，地区旅客 611w。
-
+# 基本情况
 上海是我国最大的经济中心城市，位于亚洲、欧洲和北美大三角航线的端点，飞往欧洲和北美西海岸的航行时间约为 10 小时，飞往亚洲主要城市的时间在 2 至 5小时内，航程适中。上海地处中国东部沿海经济发展带与长江经济带的交汇处，直接服务区长三角地区是中国目前经济发展速度最快、经济总量规模最大、最具有发展潜力的经济板块；间接服务区 2 小时飞行圈资源丰富，包括中国 80%的前 100 大城市、54%的国土资源和 90%的人口、93%的 GDP 产出地和日本、韩国的大部分地区。长三角地区已经成为了世界上第 6 大城市群，财富 500 强中有 400 多家企业已经在这里进行了投资，机场半径 300 公里的腹地内覆盖了长三角地的 8 个主要工业、科技园区，相关产业航空关联度高，主要产业为电子信息、汽车、石化、成套设备、精品钢材和生物医药等。
 
 东部沿海国际旅客的唯一选择
-2019年卫星厅使用后，年客运量 8000 万。
+
+当前浦东机场的年客运量 8000 万，
+四期扩建工程主要包括航站区、飞行区、旅客捷运、市政配套、新东货运区、附属配套等六大项目，建成后预计可满足2030年浦东机场年旅客吞吐量1.3亿人次的需求，为对标全球卓越城市、建设世界一流的国际航空枢纽提供基础保障。
+
+2019年，上海机场营收 109 亿，非航收入68.6亿，其中商业餐饮收入54.6亿，净利润 50 亿。白云机场营收 78.7 亿，净利润 10.0 亿。赚钱能力差别太明显了。旅客吞吐量 7615w，国内旅客 3764w，国际旅客 3240w，地区旅客 611w。
+
+2023年恢复情况，截止9月，旅客吞吐量 3871w，国内旅客 2788w，国际旅客 1083w。跟 2019 同期比较，国内已经完全恢复，甚至超过。但国际旅客才刚刚恢复到前期的一半。下面列出了 7-9 三个月份的分月数据，
+
+| 2023月份 | 旅客吞吐量 | 国内 | 国内 |
+| --- | -------- | --- | --- |
+| 7 | 571w | 390w | 181w |
+| 8 | 584w | 388w | 196w |
+| 9 | 516w | 343w | 173w |
+
+| 2019月份 | 旅客吞吐量 | 国内 | 国内 |
+| --- | -------- | --- | --- |
+| 7 | 682w | 335w | 347w |
+| 8 | 670w | 327w | 343w |
+| 9 | 615w | 309w | 306w |
+
+
+# 重大资产重组
+2022年，对大股东机场集团进行定向增发收购虹桥机场，增发价格44.09元/股。同时募集配套资金50亿，根据本次募集配套资金发行价格为 39.19 元/股。
