--- a/_posts/2023-11-11-企业经营与财务报表.md
+++ b/_posts/2023-11-11-企业经营与财务报表.md
@@ -26,6 +26,7 @@ categories: 公司分析
 > 资产负债表、利润表、现金流量表是反映企业经营活动的最重要的三张财务报表，上市公司披露的财报中都会包含这三张报表。
 
 资产负债表
+
 | 项目 | 2023年10月1日 | 2023年11月1日 |
 | ------ | ------ | ------ |
 | 货币资金 | 0 | 3000 |
@@ -41,6 +42,7 @@ categories: 公司分析
 | 负债和所有者权益合计 | 600 | 3500 |
 
 利润表
+
 | 项目 | 2023年10月 |
 | ------ | ------ |
 | 营业总收入 | 4500 |
@@ -50,6 +52,7 @@ categories: 公司分析
 | 营业利润 | 2900 |
 
 现金流量表
+
 | 项目 | 2023年10月 |
 | ------ | ------ |
 | 经营活动产生的现金流量： |  |
@@ -90,6 +93,7 @@ categories: 公司分析
 经过了第二个月的经营，这个生意的财务报表如下所示：
 
 资产负债表
+
 | 项目 | 2023年11月1日 | 2023年11月30日 |
 | ------ | ------ | ------ |
 | 货币资金 | 3000 | 18400 |
@@ -112,6 +116,7 @@ categories: 公司分析
 | 负债和所有者权益合计 | 3500 | 25250 |
 
 利润表
+
 | 项目 | 2023年10月 | 2023年11月 |
 | ------ | ------ | ------ |
 | 营业总收入 | 4500 | 18000 |
@@ -123,6 +128,7 @@ categories: 公司分析
 | 营业利润 | 2900 | 9550 |
 
 现金流量表
+
 | 项目 | 2023年10月 | 2023年11月 |
 | ------ | ------ | ------ |
 | 经营活动产生的现金流量： |  |  |
@@ -151,7 +157,7 @@ categories: 公司分析
 # 财务报表与企业经营
 麻雀虽小，五脏俱全，一个简单的地摊经营通过专业的财务方式记录成了报表中一个个的数字。但直到这里，我们还没有搞清楚一个问题，为什么是这三张报表？它们与企业经营之间有什么逻辑关系？要回答这个问题，需要先搞懂一些基本概念。
 
-首先是企业的本质。回想一下一开始我们为什么要尝试摆地摊的生意？答案是显而易见的——为了赚钱。与之类似的，企业的本质就是创造现金。所有企业行为背后的逻辑，都可以概括为：投入现金，收回更多的现金！其次是，在所有企业行为中，最重要的三种行为：经营、投资、融资。在摆地摊的时候，首先需要解决启动资金的问题，我们通过自有资金投入和银行贷款，这就是融资过程。然后有了钱，就开始了投资过程，去购置业务经营所需要的资产，包括小推车、摊位。最后，通过不断循环购买原材料，加工，出售，日复一日的赚取现金，这就是经营过程。企业的整个生命周期，就是是从现金开始又回到现金的往复循环，企业的三种行为——经营、投资、融资——也在一直循环往复。
+首先是企业的本质。回想一下一开始我们为什么要尝试摆地摊的生意？答案是显而易见的——为了赚钱。与之类似的，企业的本质就是创造现金。所有企业行为背后的逻辑，都可以概括为：投入现金，收回更多的现金！其次是，在所有企业行为中，最重要的三种行为是：经营、投资、融资。在摆地摊的时候，首先需要解决启动资金的问题，我们通过自有资金投入和银行贷款，这就是融资过程。然后有了钱，就开始了投资过程，去购置业务经营所需要的资产，包括小推车、摊位。最后，通过不断循环购买原材料，加工，出售，日复一日的赚取现金，这就是经营过程。企业的整个生命周期，就是是从现金开始又回到现金的往复循环，企业的三种行为——经营、投资、融资——也在一直循环往复。
 
 为了描述企业创造现金的过程，那么首先要描述一件事，企业所拥有的全部资产。资产就是企业的钱和用钱换来的各种资源，比如购买生产设备、建设厂房等；而企业的钱会有两种不同的来源：一部分是借来的，就是负债；另一部分是股东投资的，就是所有者权益。这里有一个著名的会计恒等式：资产=负债+所有者权益。资产负债表就应运而生，它清晰的展示了企业有多少家底，其中哪些是借来的，哪些是股东所有的。接下来，要继续搞清楚企业到底赚不赚钱。要搞清楚这件事，远没有想象中那么容易，因为企业的经营活动往往都是十分复杂的。就拿摆摊来说，收入中有一部分是赊账的，同时购买原材料也是赊账的，最后还得交税，给员工发工资，还银行利息等。如果光看账上现金在增加，就认为赚钱，很可能是假象。为了清楚企业赚钱的真相，就离不开利润表。它展示了企业的收入、成本、费用、税费、利润，从这些信息中，就能看出企业是在创造现金还是毁灭现金。当搞清楚了企业的家底和赚钱能力之后，还有一点至关重要，就是账上的现金还够不够明天花。就好比一个人，即使他有车有房（资产），月入十万（赚钱能力），但把卡里钱都花光了（现金流），那明天照样得饿肚子，企业也是如此。企业的所有经营活动都需要靠现金来支撑，可以设想一个简单的场景，如果员工在发薪日没有收到公司的薪水会怎么样？哪怕只晚了一天，恐怕也会导致人心惶惶。而在企业活动中，跟个人活动有很大的区别，就是一手交钱一手交货的情况很少发生，大企业经常会利用账期来占用小企业的资金。这里顺便介绍两个会计概念：收付实现制和权责发生制。前者是指依据实际的现金收付来进行记账；后者是指以权利和责任的发生来进行记账。利润表就是采用权责发生制来编制的，简单说就是即使客户赊账购买了产品，企业依然会记录为一笔收入。那么可能出现的极端情况就是企业销售时允许了大量赊账，没有实际收回现金，最终会导致账户的现金消耗一空。因此，现金流量表从经营、投资、融资这三个重要方面，记录了企业的现金流入流出情况，是企业存续的生命线。
 
