--- a/_posts/2023-11-11-企业经营与财务报表.md
+++ b/_posts/2023-11-11-企业经营与财务报表.md
@@ -25,7 +25,7 @@ categories: 公司分析
 经过了第一个月的经营，这个生意的三张财务报表如下所示：
 > 资产负债表、利润表、现金流量表是反映企业经营活动的最重要的三张财务报表，上市公司披露的财报中都会包含这三张报表。
 
-资产负债表
+### 资产负债表
 
 | 项目 | 2023年10月1日 | 2023年11月1日 |
 | ------ | ------ | ------ |
@@ -41,7 +41,7 @@ categories: 公司分析
 | 所有者权益合计 | 600 | 3500 |
 | 负债和所有者权益合计 | 600 | 3500 |
 
-利润表
+### 利润表
 
 | 项目 | 2023年10月 |
 | ------ | ------ |
@@ -51,7 +51,7 @@ categories: 公司分析
 | 其中：营业成本 | 1600（含50设备折旧） |
 | 营业利润 | 2900 |
 
-现金流量表
+### 现金流量表
 
 | 项目 | 2023年10月 |
 | ------ | ------ |
@@ -92,7 +92,7 @@ categories: 公司分析
 
 经过了第二个月的经营，这个生意的财务报表如下所示：
 
-资产负债表
+### 资产负债表
 
 | 项目 | 2023年11月1日 | 2023年11月30日 |
 | ------ | ------ | ------ |
@@ -115,7 +115,7 @@ categories: 公司分析
 | 所有者权益合计 | 3500 | 13050 |
 | 负债和所有者权益合计 | 3500 | 25250 |
 
-利润表
+### 利润表
 
 | 项目 | 2023年10月 | 2023年11月 |
 | ------ | ------ | ------ |
@@ -127,7 +127,7 @@ categories: 公司分析
 | 管理费用 | 0 | 2000 |
 | 营业利润 | 2900 | 9550 |
 
-现金流量表
+### 现金流量表
 
 | 项目 | 2023年10月 | 2023年11月 |
 | ------ | ------ | ------ |
@@ -147,6 +147,7 @@ categories: 公司分析
 | 筹资活动现金流出小计 | 0 | 0 |
 | 筹资活动产生的现金流量净额 | 0 | 4000 |
 | 现金及现金等价物净增加额 | 3000 | 15400 |
+
 
 现在我们来根据三张报表来看看经过两个月的折腾之后，小明的地摊生意经营情况如何。具体总结为一下几点：
 1. 600元资金起步，到现在总资产有25250，其中账上现金就有18400。
