--- a/_posts/2023-11-11-企业经营与财务报表.md
+++ b/_posts/2023-11-11-企业经营与财务报表.md
@@ -5,7 +5,7 @@ date: 2023-11-11 22:20:03
 categories: 公司分析
 ---
 
-# 你会摆地摊吗？
+### 你会摆地摊吗？
 让我们先来假设生活中很常见的一个场景：小明作为一个有志青年，不愿被万恶的资本家剥削，所以选择做个小本生意。由于经验和资金双重不足，所以理智的他决定先从最简单的摆摊卖烤肠做起。这样的例子数不胜数，相信每个人身边都见过，甚至自己也干过类似的事情，无论是摆地摊或者开个小店。但大多数人可能都没有认真去想过摆摊这个生意怎么样？靠谱吗？能赚到钱吗？
 
 下面对经营活动进行一下简单描述：
@@ -25,7 +25,7 @@ categories: 公司分析
 经过了第一个月的经营，这个生意的三张财务报表如下所示：
 > 资产负债表、利润表、现金流量表是反映企业经营活动的最重要的三张财务报表，上市公司披露的财报中都会包含这三张报表。
 
-### 资产负债表
+##### 资产负债表
 
 | 项目 | 2023年10月1日 | 2023年11月1日 |
 | ------ | ------ | ------ |
@@ -41,7 +41,7 @@ categories: 公司分析
 | 所有者权益合计 | 600 | 3500 |
 | 负债和所有者权益合计 | 600 | 3500 |
 
-### 利润表
+##### 利润表
 
 | 项目 | 2023年10月 |
 | ------ | ------ |
@@ -51,7 +51,7 @@ categories: 公司分析
 | 其中：营业成本 | 1600（含50设备折旧） |
 | 营业利润 | 2900 |
 
-### 现金流量表
+##### 现金流量表
 
 | 项目 | 2023年10月 |
 | ------ | ------ |
@@ -92,7 +92,7 @@ categories: 公司分析
 
 经过了第二个月的经营，这个生意的财务报表如下所示：
 
-### 资产负债表
+##### 资产负债表
 
 | 项目 | 2023年11月1日 | 2023年11月30日 |
 | ------ | ------ | ------ |
@@ -115,7 +115,7 @@ categories: 公司分析
 | 所有者权益合计 | 3500 | 13050 |
 | 负债和所有者权益合计 | 3500 | 25250 |
 
-### 利润表
+##### 利润表
 
 | 项目 | 2023年10月 | 2023年11月 |
 | ------ | ------ | ------ |
@@ -127,7 +127,7 @@ categories: 公司分析
 | 管理费用 | 0 | 2000 |
 | 营业利润 | 2900 | 9550 |
 
-### 现金流量表
+##### 现金流量表
 
 | 项目 | 2023年10月 | 2023年11月 |
 | ------ | ------ | ------ |
@@ -155,7 +155,7 @@ categories: 公司分析
 3. 经营活动现金流净额大于营业利润，利润含金量高。
 4. 非流动资产占比仅 15%，轻资产特点非常明显。
 
-# 财务报表与企业经营
+### 财务报表与企业经营
 麻雀虽小，五脏俱全，一个简单的地摊经营通过专业的财务方式记录成了报表中一个个的数字。但直到这里，我们还没有搞清楚一个问题，为什么是这三张报表？它们与企业经营之间有什么逻辑关系？要回答这个问题，需要先搞懂一些基本概念。
 
 首先是企业的本质。回想一下一开始我们为什么要尝试摆地摊的生意？答案是显而易见的——为了赚钱。与之类似的，企业的本质就是创造现金。所有企业行为背后的逻辑，都可以概括为：投入现金，收回更多的现金！其次是，在所有企业行为中，最重要的三种行为是：经营、投资、融资。在摆地摊的时候，首先需要解决启动资金的问题，我们通过自有资金投入和银行贷款，这就是融资过程。然后有了钱，就开始了投资过程，去购置业务经营所需要的资产，包括小推车、摊位。最后，通过不断循环购买原材料，加工，出售，日复一日的赚取现金，这就是经营过程。企业的整个生命周期，就是是从现金开始又回到现金的往复循环，企业的三种行为——经营、投资、融资——也在一直循环往复。
@@ -164,7 +164,7 @@ categories: 公司分析
 
 至此，三张报表从两个维度上全面揭示了企业经营情况。在第一个维度上，现金流量表描述了一家企业能否生存下去，即所谓风险的视角；在第二个维度上，资产负债表和利润表则展示了倘若这家企业能够继续生存它将是什么样子——有多少家底，又有多少收益——即所谓收益的视角。总的来说，企业经营活动的过程就是创造现金的过程，即财报的生成过程。而企业创造现金的过程，是根据所处的商业环境制定战略规划并付诸实施，最终形成财报结果的过程。简言之，公司战略+战略执行=财报结果，三张报表与企业经营密不可分。
 
-# 推荐书籍
+### 推荐书籍
 书籍是人类进步的阶梯，本文内容的核心观点也是来自于下述书籍，最后推荐出来：
 《财务报表分析与股票估值》
 《一本书读懂财报》
