--- a/_posts/2023-11-11-企业经营与财务报表.md
+++ b/_posts/2023-11-11-企业经营与财务报表.md
@@ -165,6 +165,6 @@ categories: 公司分析
 至此，三张报表从两个维度上全面揭示了企业经营情况。在第一个维度上，现金流量表描述了一家企业能否生存下去，即所谓风险的视角；在第二个维度上，资产负债表和利润表则展示了倘若这家企业能够继续生存它将是什么样子——有多少家底，又有多少收益——即所谓收益的视角。总的来说，企业经营活动的过程就是创造现金的过程，即财报的生成过程。而企业创造现金的过程，是根据所处的商业环境制定战略规划并付诸实施，最终形成财报结果的过程。简言之，公司战略+战略执行=财报结果，三张报表与企业经营密不可分。
 
 ### 推荐书籍
-书籍是人类进步的阶梯，本文内容的核心观点也是来自于下述书籍，最后推荐出来：
+书籍是人类进步的阶梯，本文内容的核心观点也是来自于一些优秀的书籍，文章最后推荐一下：
 《财务报表分析与股票估值》
 《一本书读懂财报》
