--- a/_drafts/2023-9-29-上海机场.md
+++ b/_drafts/2023-9-29-上海机场.md
@@ -26,6 +26,7 @@ categories: 公司分析
 | 9 | 516w | 343w | 173w |
 | 10 | 543w | 366w | 177w |
 | 11 | 498w | 323w | 176w |
+| 12 | 533w | 329w | 204w |
 
 | 2019月份 | 旅客吞吐量 | 国内 | 国内 |
 | --- | -------- | --- | --- |
@@ -38,3 +39,9 @@ categories: 公司分析
 
 # 重大资产重组
 2022年，对大股东机场集团进行定向增发收购虹桥机场，增发价格 44.09 元/股。同时募集配套资金50亿，根据本次募集配套资金发行价格为 39.19 元/股。
+虹桥机场的基本情况
+
+# 在建工程
+
+# 经营分析
+
