--- a/_posts/2024-02-16-2023 投资总结.md
+++ b/_posts/2024-02-16-2023 投资总结.md
@@ -65,7 +65,7 @@ categories: 个人投资复盘
 3. 负债绝对数值不能超过未来一年的可支配收入
 4. 负债资金只能买入有充分理解的公司，并且在该公司极端低价情况下动用，至少是三年最低价
 
-在上面的规则之下，合理的负债不会带来爆仓的风险，但依然无法保证会有正收益。所以对我来说，负债投资还是只有在极端的低价情况下才会动用的一种方式。
+在上面的规则之下，合理的负债不会带来爆仓的风险，但依然无法保证会有正收益。所以对我来说，负债投资还是只有在极端的低价情况下才会动用的一种筹资方式。
 
 # 总结
 23年还有一个收获是形成了自己对理想仓位分布的判断：三成医药，三成机场，三成其他（白酒、高股息），一成科技。但目前实际仓位大约是 50% 机场，30% 其他（白酒、高股息），10% 医药，10% 科创50。因为机场的持续下跌过程中，补仓导致了过重的仓位，希望24年能有机会让我减掉一些机场仓位，逐步达成我的理想仓位。
