feat: 修正数据错误

--- a/_posts/2024-2-16-上海机场.md
+++ b/_posts/2024-2-16-上海机场.md
@@ -15,9 +15,9 @@ categories: 公司分析
 # 经营分析
 2019年，上海机场营收 109 亿，非航收入68.6亿，其中商业餐饮收入54.6亿，净利润 50 亿。旅客吞吐量 7615w，其中国内旅客 3764 万，国际旅客 3240 万，地区旅客 611 万。参考客流量接近的白云机场，2019年客流量 7338 万，营收 78.7 亿，净利润只有 10.0 亿，赚钱能力差别太明显了。主要的区别就在国际旅客，白机国际客流只有 1871 万，比上机少了几乎 2 千万，同时白机主要覆盖的是东南亚。不论国际旅客的数量还是质量都远远不如上机。
 
-2023年恢复情况，截止半年报，浦东机场旅客吞吐量 3871w，国内旅客 2788w，国际旅客 1083w。下面列出了 23年下半年的分月客流数据。
+2023年恢复情况，截止半年报，浦东机场旅客吞吐量 2200w，国内旅客 1667w，国际旅客 533w。下面列出了 23年下半年的分月客流数据。
 
-| 2023月份 | 旅客吞吐量 | 国内 | 国内 |
+| 2023月份 | 旅客吞吐量 | 国内 | 国际 |
 | --- | -------- | --- | --- |
 | 7 | 571w | 390w | 181w |
 | 8 | 584w | 388w | 196w |
@@ -26,7 +26,7 @@ categories: 公司分析
 | 11 | 498w | 323w | 176w |
 | 12 | 533w | 329w | 204w |
 
-| 2019月份 | 旅客吞吐量 | 国内 | 国内 |
+| 2019月份 | 旅客吞吐量 | 国内 | 国际 |
 | --- | -------- | --- | --- |
 | 7 | 682w | 335w | 347w |
 | 8 | 670w | 327w | 343w |
@@ -35,7 +35,7 @@ categories: 公司分析
 | 11 | 595w | 297w | 298w |
 | 12 | 600w | 292w | 308w |
 
-结合半年报及下半年的分月数据，可以得出23年浦东机场客流量 7116 万，国内 4927 万，国际 2189 万。跟 2019 同期比较，国内已经远远超过，但国际旅客才恢复到 2/3。结合最新的公告，净利润预告为 91,000 万元到 108,000 万元，23年全年的盈利情况恢复的较慢。但让人感到放心的是客流恢复的速度是比较快的，即便是国际客流也呈现出逐月改善的情况，所以对于上机的长期经营我是不担心的。
+结合半年报及下半年的分月数据，可以得出23年浦东机场客流量 5445 万，国内 3805 万，国际 1640 万。跟 2019 同期比较，国内已经远远超过，但国际旅客才恢复到 2/3。结合最新的公告，净利润预告为 91,000 万元到 108,000 万元，23年全年的盈利情况恢复的较慢。但让人感到放心的是客流恢复的速度是比较快的，即便是国际客流也呈现出逐月改善的情况，所以对于上机的长期经营我是不担心的。
 
 # 重大资产重组
 2022年，对大股东机场集团进行定向增发收购虹桥机场，增发价格 44.09 元/股。同时募集配套资金50亿，根据本次募集配套资金发行价格为 39.19 元/股。划重点，当前股价已经低于大股东的增发价。
