feat: 上海机场的估值

--- a/_drafts/2023-9-29-再谈白云机场.md
+++ b/_drafts/2023-9-29-再谈白云机场.md
@@ -11,3 +11,6 @@ categories: 公司分析
 23年 6317w 国内 5500w 国际 817w
 19年 7338w 国内 5544w 国际 1794w
 
+
+三年股东回报规划
+https://static.sse.com.cn/disclosure/listedinfo/announcement/c/new/2024-04-27/600004_20240427_S0K4.pdf
